[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetsetter"
version = "0.1.0"
description = "Interactive TUI for setting up NVIDIA components on Jetson"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
jetsetter = "jetsetter.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jetsetter*"]
